<?xml version="1.0"?>
<package>
	<name>vesc_driver</name>
	<version>0.0.2</version>
	<description>ROS device driver for VESC motor controllers.</description>

	<maintainer email="luis@aurorafoss.org">Luís Ferreira</maintainer>
	<maintainer email="contact@aurorafoss.org">Aurora Free Open Source Software</maintainer>
	<author email="luis@aurorafoss.org">Luís Ferreira</author>
	<author email="boulet@ll.mit.edu">Michael T. Boulet</author>
	<author email="benjamin@vedder.se">Benjamin Vedder</author>
	<license>LGPL-3.0</license>

	<url type="website">https://gitlab.com/aurorafossorg/p/monzorg/ros-vesc-driver</url>
	<url type="repository">https://gitlab.com/aurorafossorg/p/monzorg/ros-vesc-driver</url>
	<url type="bugtracker">https://gitlab.com/aurorafossorg/p/monzorg/ros-vesc-driver/issues</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>nodelet</build_depend>
	<build_depend>pluginlib</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>vesc_msgs</build_depend>
	<build_depend>serial</build_depend>

	<run_depend>nodelet</run_depend>
	<run_depend>pluginlib</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>vesc_msgs</run_depend>
	<run_depend>serial</run_depend>

	<export>
		<nodelet plugin="${prefix}/vesc_driver_nodelet.xml"/>
	</export>

</package>
